--- a/src/epub/toc.xhtml
+++ b/src/epub/toc.xhtml
@@ -14,147 +14,135 @@
 					<a href="text/imprint.xhtml">Imprint</a>
 				</li>
 				<li>
-					<a href="text/epigraph.xhtml">To the Hesitating Purchaser</a>
+					<a href="text/dedication.xhtml">Dedication</a>
 				</li>
 				<li>
-					<a href="text/dedication.xhtml">Dedication</a>
+					<a href="text/epigraph.xhtml">To the Hesitating Purchaser</a>
 				</li>
 				<li>
 					<a href="text/halftitle.xhtml">Treasure Island</a>
 					<ol>
 						<li>
-							<a href="text/part-1.xhtml">Part <span epub:type="z3998:roman">I</span>: The Old Buccaneer</a>
-							<ol>
-								<li>
-									<a href="text/chapter-1.xhtml"><span epub:type="z3998:roman">I</span>: At the Admiral Benbow</a>
-								</li>
-								<li>
-									<a href="text/chapter-2.xhtml"><span epub:type="z3998:roman">II</span>: Black Dog Appears and Disappears</a>
-								</li>
-								<li>
-									<a href="text/chapter-3.xhtml"><span epub:type="z3998:roman">III</span>: The Black Spot</a>
-								</li>
-								<li>
-									<a href="text/chapter-4.xhtml"><span epub:type="z3998:roman">IV</span>: The Sea-Chest</a>
-								</li>
-								<li>
-									<a href="text/chapter-5.xhtml"><span epub:type="z3998:roman">V</span>: The Last of the Blind Man</a>
-								</li>
-								<li>
-									<a href="text/chapter-6.xhtml"><span epub:type="z3998:roman">VI</span>: The Captain’s Papers</a>
-								</li>
-							</ol>
+							<a href="text/chapter-1.xhtml"><span epub:type="z3998:roman">I</span>: At the Admiral Benbow</a>
 						</li>
 						<li>
-							<a href="text/part-2.xhtml">Part <span epub:type="z3998:roman">II</span>: The Sea-Cook</a>
-							<ol>
-								<li>
-									<a href="text/chapter-7.xhtml"><span epub:type="z3998:roman">VII</span>: I Go to Bristol</a>
-								</li>
-								<li>
-									<a href="text/chapter-8.xhtml"><span epub:type="z3998:roman">VIII</span>: At the Sign of the Spy-Glass</a>
-								</li>
-								<li>
-									<a href="text/chapter-9.xhtml"><span epub:type="z3998:roman">IX</span>: Powder and Arms</a>
-								</li>
-								<li>
-									<a href="text/chapter-10.xhtml"><span epub:type="z3998:roman">X</span>: The Voyage</a>
-								</li>
-								<li>
-									<a href="text/chapter-11.xhtml"><span epub:type="z3998:roman">XI</span>: What I Heard in the Apple Barrel</a>
-								</li>
-								<li>
-									<a href="text/chapter-12.xhtml"><span epub:type="z3998:roman">XII</span>: Council of War</a>
-								</li>
-							</ol>
+							<a href="text/chapter-2.xhtml"><span epub:type="z3998:roman">II</span>: Black Dog Appears and Disappears</a>
 						</li>
 						<li>
-							<a href="text/part-3.xhtml">Part <span epub:type="z3998:roman">III</span>: My Shore Adventure</a>
-							<ol>
-								<li>
-									<a href="text/chapter-13.xhtml"><span epub:type="z3998:roman">XIII</span>: How My Shore Adventure Began</a>
-								</li>
-								<li>
-									<a href="text/chapter-14.xhtml"><span epub:type="z3998:roman">XIV</span>: The First Blow</a>
-								</li>
-								<li>
-									<a href="text/chapter-15.xhtml"><span epub:type="z3998:roman">XV</span>: The Man of the Island</a>
-								</li>
-							</ol>
+							<a href="text/chapter-3.xhtml"><span epub:type="z3998:roman">III</span>: The Black Spot</a>
 						</li>
 						<li>
-							<a href="text/part-4.xhtml">Part <span epub:type="z3998:roman">IV</span>: The Stockade</a>
-							<ol>
-								<li>
-									<a href="text/chapter-16.xhtml"><span epub:type="z3998:roman">XVI</span>: Narrative Continued by the Doctor⁠—How the Ship Was Abandoned</a>
-								</li>
-								<li>
-									<a href="text/chapter-17.xhtml"><span epub:type="z3998:roman">XVII</span>: Narrative Continued by the Doctor⁠—The Jolly-Boat’s Last Trip</a>
-								</li>
-								<li>
-									<a href="text/chapter-18.xhtml"><span epub:type="z3998:roman">XVIII</span>: Narrative Continued by the Doctor⁠—End of the First Day’s Fighting</a>
-								</li>
-								<li>
-									<a href="text/chapter-19.xhtml"><span epub:type="z3998:roman">XIX</span>: Narrative Resumed by Jim Hawkins⁠—The Garrison in the Stockade</a>
-								</li>
-								<li>
-									<a href="text/chapter-20.xhtml"><span epub:type="z3998:roman">XX</span>: Silver’s Embassy</a>
-								</li>
-								<li>
-									<a href="text/chapter-21.xhtml"><span epub:type="z3998:roman">XXI</span>: The Attack</a>
-								</li>
-							</ol>
+							<a href="text/chapter-4.xhtml"><span epub:type="z3998:roman">IV</span>: The Sea-Chest</a>
 						</li>
 						<li>
-							<a href="text/part-5.xhtml">Part <span epub:type="z3998:roman">V</span>: My Sea Adventure</a>
-							<ol>
-								<li>
-									<a href="text/chapter-22.xhtml"><span epub:type="z3998:roman">XXII</span>: How My Sea Adventure Began</a>
-								</li>
-								<li>
-									<a href="text/chapter-23.xhtml"><span epub:type="z3998:roman">XXIII</span>: The Ebb-Tide Runs</a>
-								</li>
-								<li>
-									<a href="text/chapter-24.xhtml"><span epub:type="z3998:roman">XXIV</span>: The Curse of the Coracle</a>
-								</li>
-								<li>
-									<a href="text/chapter-25.xhtml"><span epub:type="z3998:roman">XXV</span>: I Strike the Jolly Roger</a>
-								</li>
-								<li>
-									<a href="text/chapter-26.xhtml"><span epub:type="z3998:roman">XXVI</span>: Israel Hands</a>
-								</li>
-								<li>
-									<a href="text/chapter-27.xhtml"><span epub:type="z3998:roman">XXVII</span>: “Pieces of Eight”</a>
-								</li>
-							</ol>
+							<a href="text/chapter-5.xhtml"><span epub:type="z3998:roman">V</span>: The Last of the Blind Man</a>
 						</li>
 						<li>
-							<a href="text/part-6.xhtml">Part <span epub:type="z3998:roman">VI</span>: Captain Silver</a>
-							<ol>
-								<li>
-									<a href="text/chapter-28.xhtml"><span epub:type="z3998:roman">XXVIII</span>: In the Enemy’s Camp</a>
-								</li>
-								<li>
-									<a href="text/chapter-29.xhtml"><span epub:type="z3998:roman">XXIX</span>: The Black Spot Again</a>
-								</li>
-								<li>
-									<a href="text/chapter-30.xhtml"><span epub:type="z3998:roman">XXX</span>: On Parole</a>
-								</li>
-								<li>
-									<a href="text/chapter-31.xhtml"><span epub:type="z3998:roman">XXXI</span>: The Treasure-Hunt⁠—Flint’s Pointer</a>
-								</li>
-								<li>
-									<a href="text/chapter-32.xhtml"><span epub:type="z3998:roman">XXXII</span>: The Treasure-Hunt⁠—The Voice Among the Trees</a>
-								</li>
-								<li>
-									<a href="text/chapter-33.xhtml"><span epub:type="z3998:roman">XXXIII</span>: The Fall of a Chieftan</a>
-								</li>
-								<li>
-									<a href="text/chapter-34.xhtml"><span epub:type="z3998:roman">XXXIV</span>: And Last</a>
-								</li>
-							</ol>
+							<a href="text/chapter-6.xhtml"><span epub:type="z3998:roman">VI</span>: The Captain’s Papers</a>
+						</li>
+						<li>
+							<a href="text/chapter-7.xhtml"><span epub:type="z3998:roman">VII</span>: I Go to Bristol</a>
+						</li>
+						<li>
+							<a href="text/chapter-8.xhtml"><span epub:type="z3998:roman">VIII</span>: At the Sign of the Spy-Glass</a>
+						</li>
+						<li>
+							<a href="text/chapter-9.xhtml"><span epub:type="z3998:roman">IX</span>: Powder and Arms</a>
+						</li>
+						<li>
+							<a href="text/chapter-10.xhtml"><span epub:type="z3998:roman">X</span>: The Voyage</a>
+						</li>
+						<li>
+							<a href="text/chapter-11.xhtml"><span epub:type="z3998:roman">XI</span>: What I Heard in the Apple Barrel</a>
+						</li>
+						<li>
+							<a href="text/chapter-12.xhtml"><span epub:type="z3998:roman">XII</span>: Council of War</a>
+						</li>
+						<li>
+							<a href="text/chapter-13.xhtml"><span epub:type="z3998:roman">XIII</span>: How My Shore Adventure Began</a>
+						</li>
+						<li>
+							<a href="text/chapter-14.xhtml"><span epub:type="z3998:roman">XIV</span>: The First Blow</a>
+						</li>
+						<li>
+							<a href="text/chapter-15.xhtml"><span epub:type="z3998:roman">XV</span>: The Man of the Island</a>
+						</li>
+						<li>
+							<a href="text/chapter-16.xhtml"><span epub:type="z3998:roman">XVI</span>: Narrative Continued by the Doctor⁠—How the Ship Was Abandoned</a>
+						</li>
+						<li>
+							<a href="text/chapter-17.xhtml"><span epub:type="z3998:roman">XVII</span>: Narrative Continued by the Doctor⁠—The Jolly-Boat’s Last Trip</a>
+						</li>
+						<li>
+							<a href="text/chapter-18.xhtml"><span epub:type="z3998:roman">XVIII</span>: Narrative Continued by the Doctor⁠—End of the First Day’s Fighting</a>
+						</li>
+						<li>
+							<a href="text/chapter-19.xhtml"><span epub:type="z3998:roman">XIX</span>: Narrative Resumed by Jim Hawkins⁠—The Garrison in the Stockade</a>
+						</li>
+						<li>
+							<a href="text/chapter-20.xhtml"><span epub:type="z3998:roman">XX</span>: Silver’s Embassy</a>
+						</li>
+						<li>
+							<a href="text/chapter-21.xhtml"><span epub:type="z3998:roman">XXI</span>: The Attack</a>
+						</li>
+						<li>
+							<a href="text/chapter-22.xhtml"><span epub:type="z3998:roman">XXII</span>: How My Sea Adventure Began</a>
+						</li>
+						<li>
+							<a href="text/chapter-23.xhtml"><span epub:type="z3998:roman">XXIII</span>: The Ebb-Tide Runs</a>
+						</li>
+						<li>
+							<a href="text/chapter-24.xhtml"><span epub:type="z3998:roman">XXIV</span>: The Curse of the Coracle</a>
+						</li>
+						<li>
+							<a href="text/chapter-25.xhtml"><span epub:type="z3998:roman">XXV</span>: I Strike the Jolly Roger</a>
+						</li>
+						<li>
+							<a href="text/chapter-26.xhtml"><span epub:type="z3998:roman">XXVI</span>: Israel Hands</a>
+						</li>
+						<li>
+							<a href="text/chapter-27.xhtml"><span epub:type="z3998:roman">XXVII</span>: “Pieces of Eight”</a>
+						</li>
+						<li>
+							<a href="text/chapter-28.xhtml"><span epub:type="z3998:roman">XXVIII</span>: In the Enemy’s Camp</a>
+						</li>
+						<li>
+							<a href="text/chapter-29.xhtml"><span epub:type="z3998:roman">XXIX</span>: The Black Spot Again</a>
+						</li>
+						<li>
+							<a href="text/chapter-30.xhtml"><span epub:type="z3998:roman">XXX</span>: On Parole</a>
+						</li>
+						<li>
+							<a href="text/chapter-31.xhtml"><span epub:type="z3998:roman">XXXI</span>: The Treasure-Hunt⁠—Flint’s Pointer</a>
+						</li>
+						<li>
+							<a href="text/chapter-32.xhtml"><span epub:type="z3998:roman">XXXII</span>: The Treasure-Hunt⁠—The Voice Among the Trees</a>
+						</li>
+						<li>
+							<a href="text/chapter-33.xhtml"><span epub:type="z3998:roman">XXXIII</span>: The Fall of a Chieftan</a>
+						</li>
+						<li>
+							<a href="text/chapter-34.xhtml"><span epub:type="z3998:roman">XXXIV</span>: And Last</a>
 						</li>
 					</ol>
+				</li>
+				<li>
+					<a href="text/part-1.xhtml">Part <span epub:type="z3998:roman">I</span>: The Old Buccaneer</a>
+				</li>
+				<li>
+					<a href="text/part-2.xhtml">Part <span epub:type="z3998:roman">II</span>: The Sea-Cook</a>
+				</li>
+				<li>
+					<a href="text/part-3.xhtml">Part <span epub:type="z3998:roman">III</span>: My Shore Adventure</a>
+				</li>
+				<li>
+					<a href="text/part-4.xhtml">Part <span epub:type="z3998:roman">IV</span>: The Stockade</a>
+				</li>
+				<li>
+					<a href="text/part-5.xhtml">Part <span epub:type="z3998:roman">V</span>: My Sea Adventure</a>
+				</li>
+				<li>
+					<a href="text/part-6.xhtml">Part <span epub:type="z3998:roman">VI</span>: Captain Silver</a>
 				</li>
 				<li>
 					<a href="text/endnotes.xhtml">Endnotes</a>
@@ -180,16 +168,16 @@
 					<a href="text/imprint.xhtml" epub:type="frontmatter imprint">Imprint</a>
 				</li>
 				<li>
-					<a href="text/epigraph.xhtml" epub:type="frontmatter epigraph z3998:poem">To the Hesitating Purchaser</a>
+					<a href="text/dedication.xhtml" epub:type="frontmatter dedication">Dedication</a>
 				</li>
 				<li>
-					<a href="text/dedication.xhtml" epub:type="frontmatter dedication">Dedication</a>
+					<a href="text/epigraph.xhtml" epub:type="frontmatter epigraph z3998:poem">To the Hesitating Purchaser</a>
 				</li>
 				<li>
 					<a href="text/halftitle.xhtml" epub:type="frontmatter halftitlepage">Half Title</a>
 				</li>
 				<li>
-					<a href="text/part-1.xhtml" epub:type="bodymatter z3998:fiction">Treasure Island</a>
+					<a href="text/chapter-1.xhtml" epub:type="bodymatter z3998:fiction">Treasure Island</a>
 				</li>
 				<li>
 					<a href="text/endnotes.xhtml" epub:type="backmatter endnotes">Endnotes</a>
